--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/perfil lana.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="img/perfil lana.jpg" alt="avatar da Lana Del Rey" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Lana Del Rey</p>
         <h1>Cantora e Compositora</h1>
-        <p>Sou Engenheira de Computação e Pedagoga. Ensino pensamento computacional para estudantes do Ensino
+        <p>Sou Cantora-compositora e modelo americana. Ensino pensamento computacional para estudantes do Ensino
             Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
             que já desenvolvi!</p>
         <p>Minhas habilidades</p>
