--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             srcset="">
         <p class="lead">Lana Del Rey</p>
         <h1>Cantora e Compositora</h1>
-        <p>Sou Cantora-compositora e modelo americana. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p>Sou Cantora-compositora e modelo americana. Nasci dia 21 de julho de 1985.Minha primeira música foi "Video games"
+            que foi lançada na internet em julho de 2011 e fez parte do álbum Born to die!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
