--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <h1>Cantora e Compositora</h1>
         <p>Sou Cantora-compositora e modelo americana. Nasci dia 21 de julho de 1985. Minha primeira música foi "Video games"
             que foi lançada na internet em julho de 2011 e fez parte do álbum Born to die!</p>
-        <p>Minhas habilidades</p>
+        <p>Poetisa norte-americana</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">Pop barroco</p>
+            <p class="badge bg-secondary">Trip hop</p>
+            <p class="badge bg-secondary">Dream pop</p>
+            <p class="badge bg-secondary">Rock</p>
         </div>
     </header>
     <main class="container mt-5">
